MFLT-8016 Document dev-mode and new commands for Linux SDK 1.2.0 (#350)
 ### Summary

This documents the new SDK features included in Linux SDK 1.2.0.

 - memfaultctl and all it's new features

I have also split the getting started into:

 - A quickstart guide with the instructions to use the Docker image (this used
 to be only in a README in the meta-memfault-example layer) but I think it's
 very valuable and wanted to make this more visible.

 - An integration guide (used to be called getting started guide). This matches
 what we do on MCUs.

And I have renamed some pages to avoid having linux multiple times in the page
URL (again this matches what we do for MCUs and most Android pages).

For each renamed page I have added a redirect in the Netlify configuration.

 ### Test Plan

- Make sure the doc builds.
- Make sure all renamed pages have an entry in the `_redirects` file.
- Proof read for grammar and spelling.
- Make sure all links have been updated to the new URLs (except the Changelogs,
I have left them as-is - users will be redirected via Netlify redirects).

--- a/blog/2022-05-31.mdx
+++ b/blog/2022-05-31.mdx
@@ -5,18 +5,18 @@ title: May 2022
 ### Memfault OTA for Embedded Linux
 
 Memfault’s over-the-air update service is now
-[available on Embedded Linux with SWUpdate](/docs/linux/linux-releases-integration-guide)
-via the [hawkBit DDI](/docs/linux/linux-memfault-hawkbit-comparison). This makes
-all Memfault OTA management and hosting features such as cohorts, staged
-rollouts, full vs. delta releases, and a scalable global CDN available to Linux
-devices that utilize one of the most popular update agents. Memfault also added
-support for forced (non-interactive) updates – invaluable for delivering
-security updates to embedded IoT devices.
+[available on Embedded Linux with SWUpdate](/docs/linux/ota) via the
+[hawkBit DDI](/docs/linux/memfault-hawkbit-comparison). This makes all Memfault
+OTA management and hosting features such as cohorts, staged rollouts, full vs.
+delta releases, and a scalable global CDN available to Linux devices that
+utilize one of the most popular update agents. Memfault also added support for
+forced (non-interactive) updates – invaluable for delivering security updates to
+embedded IoT devices.
 
 ![Memfault ❤️ Linux.png](/img/blog/2022-05-31-MemfaultHeartLinux.png)
 
 To communicate with SWUpdate clients,
-[Memfault acts as a hawkBit update server](/docs/linux/linux-memfault-hawkbit-comparison).
+[Memfault acts as a hawkBit update server](/docs/linux/memfault-hawkbit-comparison).
 It implements the Direct Device Integration API enabling other on-device agents
 such as [RAUC (via hawkBit client)](https://github.com/rauc/rauc-hawkbit) to
 deliver and install software remotely as well.
@@ -71,6 +71,5 @@ deliver and install software remotely as well.
 
 ## Linux
 
-- Added:
-  [API endpoint for hawkBit](/docs/linux/linux-memfault-hawkbit-comparison)
+- Added: [API endpoint for hawkBit](/docs/linux/memfault-hawkbit-comparison)
   (including support for forced vs. soft releases)
