--- a/blog/2022-06-30.mdx
+++ b/blog/2022-06-30.mdx
@@ -105,7 +105,7 @@ and used to control how to notify per Alert.
 ## Linux
 
 - Added:
-  [Integration Guide for Linux + SWUpdate + hawkBit](/docs/linux/linux-releases-integration-guide#getting-started)
+  [Integration Guide for Linux + SWUpdate + hawkBit](/docs/linux/ota#getting-started)
 - Improved: Automatically add
   [Memfault hardware version](/docs/platform/software-version-hardware-version)
   to Memfault when first reported via hawkBit DDI
