--- a/blog/2022-07-31.mdx
+++ b/blog/2022-07-31.mdx
@@ -20,8 +20,8 @@ configuration of related components such as SWUpdate for OTA. It will act as a
 minimal yet central component in future releases for features such as metrics
 and crash reporting.
 
-There is also a new [Getting Started](/docs/linux/linux-getting-started-guide)
-section that guides users through the setup with Yocto, and the
+There is also a new [Getting Started](/docs/linux/integration-guide) section
+that guides users through the setup with Yocto, and the
 [reference documentation](/docs/linux/reference-memfaultd-configuration) covers
 more details.
 
@@ -88,10 +88,10 @@ more details.
 ## Linux
 
 - Updated: [Introduction page for Embedded Linux](/docs/linux/introduction)
-- Added: [Getting Started Guide](/docs/linux/linux-getting-started-guide) and
-  Reference pages for
+- Added: [Getting Started Guide](/docs/linux/integration-guide) and Reference
+  pages for
   [memfaultd Configuration](/docs/linux/reference-memfaultd-configuration/) and
-  [memfaultd CLI](/docs/linux/reference-memfaultd-cli)
+  [memfaultd CLI](/docs/linux/reference-memfaultctl-cli)
 - First
   [public SDK version 0.2.0](https://github.com/memfault/memfault-linux-sdk/blob/-/CHANGELOG.md)
   following initial 0.1.0 was released. Some highlights:
