--- a/docs/platform/metrics.mdx
+++ b/docs/platform/metrics.mdx
@@ -28,7 +28,7 @@ your devices using our SDKs:
 - for Android:
   [Bort SDK Built-In Metrics](/docs/android/android-builtin-metrics),
   [Bort Custom Metrics APIs](/docs/android/android-custom-metrics)
-- for Linux: [Linux Metrics](/docs/linux/linux-metrics)
+- for Linux: [Linux Metrics](/docs/linux/metrics)
 
 ### From the Memfault app
 
@@ -214,7 +214,7 @@ supported).
 There are three ways to write an Attribute:
 
 1. using the Metrics APIs
-   ([MCU](/docs/mcu/metrics-api)/[Android](/docs/android/android-custom-metrics)/[Linux](/docs/linux/linux-metrics))
+   ([MCU](/docs/mcu/metrics-api)/[Android](/docs/android/android-custom-metrics)/[Linux](/docs/linux/metrics))
 2. using the REST API
 3. using the web application.
 
