--- a/docs/platform/ota.mdx
+++ b/docs/platform/ota.mdx
@@ -476,4 +476,4 @@ families and existing setups:
 
 [docs-mcu]: /docs/mcu/releases-integration-guide
 [docs-android]: /docs/android/android-releases-integration-guide
-[docs-linux]: /docs/linux/linux-releases-integration-guide
+[docs-linux]: /docs/linux/ota
