--- a/docs/platform/projects-and-fleets.mdx
+++ b/docs/platform/projects-and-fleets.mdx
@@ -56,8 +56,7 @@ Within each Memfault Project you can:
 - [Inspect and debug individual Devices](./inspecting-a-device.mdx)
 - Deploy new firmware/software updates to parts of your
   [Android](../android/android-releases-integration-guide.mdx),
-  [MCU](../mcu/releases-integration-guide.mdx) or
-  [Linux](../linux/linux-releases-integration-guide) Fleet
+  [MCU](../mcu/releases-integration-guide.mdx) or [Linux](../linux/ota) Fleet
 
 ### Creating a new Project
 
