--- a/docs/platform/rate-limiting.mdx
+++ b/docs/platform/rate-limiting.mdx
@@ -110,8 +110,8 @@ Below is a list of the APIs and payloads that may be rate-limited:
       <td>Device</td>
       <td>Linux</td>
       <td>
-        <Link to="/docs/linux/linux-coredumps/">ELF Coredumps</Link> are a
-        source of Issues for Linux Projects.
+        <Link to="/docs/linux/coredumps/">ELF Coredumps</Link> are a source of
+        Issues for Linux Projects.
       </td>
     </tr>
     <tr id="bug-reports">
